--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,18 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".MainActivity">
-        </activity>
+        android:supportsRtl="true" >
         <activity
-            android:name=".LoginActivity">
+            android:name=".MainActivity"
+            android:theme="@style/MainActivityTheme" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/SigninActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
-
 </manifest>
