Always retain the full app state
Without this, android will start the app in the default activity if it hasn't been used for a while, which discards the current board.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
             android:theme="@style/MainActivityTheme" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/SigninActivityTheme">
+            android:theme="@style/SigninActivityTheme"
+            android:alwaysRetainTaskState="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
