Add a skeleton for a background service
Doesn't do anything yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,19 @@
             android:theme="@style/MainActivityTheme" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/SigninActivityTheme"
-            android:alwaysRetainTaskState="true">
+            android:alwaysRetainTaskState="true"
+            android:theme="@style/SigninActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".WebSocketService"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
+
 </manifest>
