Simplify changing of stored login data on start
* Auto-select contents when input fields get focus
* Auto-show the keyboard when the login activity starts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         <activity
             android:name=".LoginActivity"
             android:alwaysRetainTaskState="true"
-            android:theme="@style/SigninActivityTheme">
+            android:theme="@style/SigninActivityTheme"
+            android:windowSoftInputMode="stateVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
