--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name="de.int80.gothbingo.GothBingo"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         tools:ignore="GoogleAppIndexingWarning">
